--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
   "version": "0.0.0-1",
   "engines": {
     "node": "0.10.x"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-less": "^1.0.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-html-build": "^0.3.2",
+    "load-grunt-tasks": "^2.0.0"
   }
 }
