--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-concat-include": "^0.2.4",
     "grunt-contrib-less": "^1.0.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-html-build": "^0.3.2",
