--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-less": "^1.0.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-html-build": "^0.3.2",
+    "grunt-includes": "^0.4.5",
     "load-grunt-tasks": "^2.0.0"
   }
 }
