--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-cssmin": "^0.11.0",
     "grunt-contrib-less": "^1.0.0",
+    "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-html-build": "^0.3.2",
     "grunt-includes": "^0.4.5",
